--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World wdw</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>你好，吴艳！</h1>
+<p>毛妮同学，你在干啥？</p>
 </body>
 </html>
