--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>你好，吴艳！</h1>
-<p>毛妮同学，你在干啥？</p>
+<h1 align="center">你好，吴艳！</h1>
+<h1 align="center">毛妮同学，你在干啥？</h1>
+<h1 align="center">我几点回去呢？</h1>
+<h1 align="center">你要不要先把米饭做好？</h1>
 </body>
 </html>
