--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@ layout: default
                 {% endfor %}
               </ul>
               <div style="height: 200px;width: 200px;">
-                <script type="text/javascript" src="//rf.revolvermaps.com/0/0/0.js?i=5n7jmlgodoy&amp;d=3&amp;p=1&amp;b=1&amp;w=293&amp;g=3&amp;f=arial&amp;fs=14&amp;r=0&amp;c0=54ff00&amp;c1=0006ff&amp;c2=000000&amp;ic0=0&amp;ic1=0" async="async">
-                </script>
+                <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=59xg0urd1zq&amp;m=0&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33" async="async"></script>
               </div>
             </div>
           </div>
